# BudAI-Rag

./: .gitignore  README.md  global_configs.code-workspace  requirements.txt
admin-frontend/: package-lock.json  package.json  vite.config.js
admin-frontend/src/: App.jsx
admin-frontend/src/api/: auth.js  files.js  index.js  knowledgeBases.js  llmModels.js  users.js
admin-frontend/src/pages/: DashboardLayout.jsx  FilesPage.jsx  KnowledgeBasePage.jsx  LoginPage.jsx  ModelsPage.jsx  UsersPage.jsx
admin-frontend/src/store/: auth.js
backend/: .env.example  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
backend/core/: dependencies.py  exceptions.py  security.py
backend/models/: assistant.py  conversation.py  file.py  knowledge_base.py  llm_model.py  message.py  user.py
backend/repositories/: assistant.py  conversation.py  file.py  knowledge_base.py  llm_model.py  message.py  user.py
backend/routers/: assistants.py  auth.py  conversations.py  files.py  health.py  knowledge_bases.py  llm_models.py  users.py
backend/schemas/: assistant.py  auth.py  conversation.py  file.py  knowledge_base.py  llm_model.py  message.py  user.py
backend/services/: assistant.py  auth.py  conversation.py  file.py  knowledge_base.py  llm_model.py  user.py
backend/services/ai/: chat.py  embedding.py  rag.py
backend/uploads/: 3fec1e51-73a2-4733-a89d-a035cd038f8e.md
chat-frontend/: package-lock.json  package.json  vite.config.js
chat-frontend/src/: App.jsx
chat-frontend/src/api/: assistants.js  auth.js  conversations.js  index.js
(+3 files in other folders)
