[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt==4.0.1",
    "elasticsearch==8.13.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "uvicorn>=0.45.0",
]
